[gd_scene load_steps=6 format=3 uid="uid://b1m0k8v7vinbp"]

[ext_resource type="Script" path="res://scenes/enemies/hunter.gd" id="1_4ypux"]
[ext_resource type="Texture2D" uid="uid://6ruteeaemiml" path="res://graphics/enemies/hunter/hunter.png" id="1_n701e"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_86ecc"]
radius = 34.0
height = 352.0

[sub_resource type="CircleShape2D" id="CircleShape2D_11373"]
radius = 3928.94

[sub_resource type="CircleShape2D" id="CircleShape2D_1amh7"]
radius = 258.095

[node name="Hunter" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 15
script = ExtResource("1_4ypux")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_n701e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_86ecc")

[node name="NoticeArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoticeArea"]
shape = SubResource("CircleShape2D_11373")

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_1amh7")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Timers" type="Node" parent="."]

[node name="Timer" type="Timer" parent="Timers"]
wait_time = 2.0
autostart = true

[connection signal="body_entered" from="NoticeArea" to="." method="_on_notice_area_body_entered"]
[connection signal="body_exited" from="NoticeArea" to="." method="_on_notice_area_body_exited"]
[connection signal="timeout" from="Timers/Timer" to="." method="_on_timer_timeout"]
